--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek - Version Finale Gold</title>
+<title>Boulier Rekenrek - Version Finale Certifiée</title>
 <style>
   :root {
     --bg: #1a1a1a;
@@ -65,25 +65,25 @@
   .row { position: relative; height: 56px; width: 820px; pointer-events: auto; }
   .rod { position: absolute; width: 100%; height: 4px; background: var(--rod); top: 50%; transform: translateY(-50%); z-index: 1; }
 
-  /* LE CACHE - DERNIÈRE CORRECTION */
+  /* LE CACHE - REGLAGE FINAL SUR LE BOIS */
   #cache-curtain {
     position: absolute; 
-    right: -4px; /* <-- DÉCALAGE: On pousse le rideau de 4px à droite pour que la bordure soit sur le bois */
+    right: -20px; /* On le gare au milieu du bois (30px de large) */
     top: 0; bottom: 0; width: 0;
     background: #000; z-index: 20; 
-    border-left: 4px solid #444; /* La fameuse bande grise */
+    border-left: 5px solid #444; /* La bande grise */
     pointer-events: auto;
     display: none; cursor: ew-resize;
   }
   
   #cache-curtain::before { 
     content: "↔"; position: absolute; 
-    left: 2px; /* La poignée reste bien sur le bois */
+    left: -20px; 
     top: 50%; 
     background: #444; border-radius: 50%; width: 44px; height: 44px; 
     display: flex; align-items: center; justify-content: center; 
     font-weight: bold; font-size: 20px; color: white; transform: translateY(-50%);
-    box-shadow: 2px 0 5px rgba(0,0,0,0.5);
+    box-shadow: -2px 0 5px rgba(0,0,0,0.5);
   }
 
   .bead {
@@ -185,7 +185,7 @@
 
   function autoScale() {
     const availableW = window.innerWidth - 20;
-    const availableH = window.innerHeight - topBar.offsetHeight - 70; 
+    const availableH = window.innerHeight - topBar.offsetHeight - 80; 
 
     const contentW = 880; 
     const isSmallLandscape = window.innerHeight < 450;
@@ -195,7 +195,7 @@
     const sW = availableW / contentW;
     const sH = availableH / contentH;
     
-    currentScale = Math.min(1, sW, sH) * 0.96;
+    currentScale = Math.min(1, sW, sH) * 0.94; // Un peu plus petit pour la marge iPad
 
     scaler.style.transform = `scale(${currentScale})`;
     resizeCanvas();
@@ -247,14 +247,15 @@
   }
 
   function toggleCache() { isCache = !isCache; cache.style.display = isCache ? 'block' : 'none'; document.getElementById('btn-cache').classList.toggle('active', isCache); }
-  function startCacheDrag(e) { e.preventDefault(); cache.setPointerCapture(e.pointerId);
+  
+  function startCacheDrag(e) { 
+    e.preventDefault(); 
+    cache.setPointerCapture(e.pointerId);
     cache.onpointermove = (ev) => { 
       const rect = frame.getBoundingClientRect(); 
-      // Calcul corrigé pour tenir compte du décalage de 4px
-      const actualFrameW = FRAME_W * currentScale;
-      // On ajoute 4px au calcul pour compenser le décalage à droite
-      const xOffset = (ev.clientX - rect.left) / currentScale + 4;
-      cache.style.width = Math.max(0, Math.min(FRAME_W, FRAME_W - xOffset)) + "px"; 
+      // Calcul du cache corrigé pour s'arrêter sur le bois
+      const xOffset = (rect.right - ev.clientX) / currentScale + 20;
+      cache.style.width = Math.max(0, Math.min(FRAME_W + 20, xOffset)) + "px"; 
     };
     cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
   }
