--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek - Version Finale Certifiée</title>
+<title>Boulier Rekenrek - Version Tactile Optimisée</title>
 <style>
   :root {
     --bg: #1a1a1a;
@@ -21,26 +21,38 @@
     overflow: hidden; touch-action: none;
   }
 
+  /* Barre d'outils */
   .toolbar {
-    position: relative; width: 100%; min-height: 50px;
+    position: relative; width: 100%; min-height: 55px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
     justify-content: center; gap: 15px; z-index: 1000; padding: 5px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.5);
   }
 
-  .toolbar-group { display: flex; align-items: center; gap: 8px; }
+  .toolbar-group { display: flex; align-items: center; gap: 10px; }
+
+  /* Curseurs plus gros pour le doigt */
+  input[type=range] {
+    -webkit-appearance: none; width: 80px; background: transparent;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none; height: 24px; width: 24px; border-radius: 50%;
+    background: var(--accent); cursor: pointer; margin-top: -8px; border: 2px solid white;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%; height: 8px; background: #444; border-radius: 4px;
+  }
 
   .btn {
-    border: none; background: #444; color: white; padding: 6px 10px;
-    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 11px;
+    border: none; background: #444; color: white; padding: 8px 12px;
+    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 12px;
   }
   .btn.active { background: var(--accent); outline: 1px solid white; }
 
   #main-container {
-    position: relative; width: 100%; height: calc(100vh - 60px);
+    position: relative; width: 100%; height: calc(100vh - 65px);
     display: flex; flex-direction: column; align-items: center;
-    justify-content: flex-start;
-    overflow: hidden;
+    justify-content: flex-start; overflow: hidden;
   }
 
   #scaler {
@@ -51,8 +63,8 @@
   }
 
   #total-display { 
-    font-size: 38px; font-weight: bold; color: var(--accent); 
-    height: 45px; margin-bottom: 2px; text-shadow: 0 2px 4px black;
+    font-size: 42px; font-weight: bold; color: var(--accent); 
+    height: 50px; margin-bottom: 2px; text-shadow: 0 2px 4px black;
     display: flex; align-items: center;
   }
 
@@ -62,23 +74,24 @@
     pointer-events: auto; box-sizing: content-box;
   }
 
+  /* Hauteur de ligne adaptative via JS pour le paysage */
   .row { position: relative; height: 56px; width: 820px; pointer-events: auto; }
   .rod { position: absolute; width: 100%; height: 4px; background: var(--rod); top: 50%; transform: translateY(-50%); z-index: 1; }
 
-  /* LE CACHE - REGLAGE FINAL SUR LE BOIS */
+  /* CACHE : Positionné à l'extrémité du rail */
   #cache-curtain {
     position: absolute; 
-    right: -20px; /* On le gare au milieu du bois (30px de large) */
+    right: -30px; /* Garé sur toute la largeur du montant marron */
     top: 0; bottom: 0; width: 0;
     background: #000; z-index: 20; 
-    border-left: 5px solid #444; /* La bande grise */
+    border-left: 4px solid #444; 
     pointer-events: auto;
     display: none; cursor: ew-resize;
   }
   
   #cache-curtain::before { 
     content: "↔"; position: absolute; 
-    left: -20px; 
+    left: -18px; 
     top: 50%; 
     background: #444; border-radius: 50%; width: 44px; height: 44px; 
     display: flex; align-items: center; justify-content: center; 
@@ -99,14 +112,12 @@
   #draw-layer { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 500; pointer-events: none; }
   #draw-layer.active { pointer-events: auto; cursor: crosshair; }
   
-  .color-dot { width: 22px; height: 22px; border-radius: 50%; cursor: pointer; border: 2px solid #555; }
+  .color-dot { width: 24px; height: 24px; border-radius: 50%; cursor: pointer; border: 2px solid #555; }
   .color-dot.active { border-color: white; transform: scale(1.1); }
 
   @media (orientation: landscape) and (max-height: 450px) {
-    #total-display { font-size: 24px; height: 28px; }
-    .row { height: 48px; }
+    #total-display { font-size: 28px; height: 35px; }
     .toolbar { min-height: 40px; padding: 2px; }
-    #scaler { margin-top: 2px; }
   }
 </style>
 </head>
@@ -114,8 +125,8 @@
 
 <div class="toolbar" id="top-bar">
   <div class="toolbar-group">
-    <input type="range" id="row-range" min="1" max="10" value="10" style="width:60px">
-    <span id="row-val" style="font-weight:bold; font-size:14px; color:var(--accent)">10</span>
+    <input type="range" id="row-range" min="1" max="10" value="10">
+    <span id="row-val" style="font-weight:bold; font-size:16px; color:var(--accent)">10</span>
   </div>
   <div class="toolbar-group">
     <button class="btn" onclick="allTo(0)">0</button>
@@ -127,7 +138,7 @@
     <button class="btn" id="btn-cache" onclick="toggleCache()">🌑 Cache</button>
     <button class="btn" id="btn-val" onclick="toggleVal()">Valeur</button>
   </div>
-  <div class="toolbar-group" style="gap:10px">
+  <div class="toolbar-group" style="gap:12px">
     <button class="btn" id="btn-pen" onclick="togglePen()">✏️ Stylo</button>
     <div class="color-dot active" style="background:#0f6cf9" onclick="setCol('#0f6cf9', this)"></div>
     <div class="color-dot" style="background:#ffeb3b" onclick="setCol('#ffeb3b', this)"></div>
@@ -184,19 +195,22 @@
   }
 
   function autoScale() {
+    const isLandscape = window.innerWidth > window.innerHeight && window.innerHeight < 500;
+    
+    // On réduit la hauteur des lignes en paysage pour gagner de la place
+    const rowH = isLandscape ? 42 : 56;
+    document.querySelectorAll('.row').forEach(r => r.style.height = rowH + "px");
+
     const availableW = window.innerWidth - 20;
-    const availableH = window.innerHeight - topBar.offsetHeight - 80; 
+    const availableH = window.innerHeight - topBar.offsetHeight - 40;
 
     const contentW = 880; 
-    const isSmallLandscape = window.innerHeight < 450;
-    const rH = isSmallLandscape ? 48 : 56;
-    const contentH = (isSmallLandscape ? 28 : 50) + (rH * rowsCount);
+    const contentH = (isLandscape ? 35 : 50) + (rowH * rowsCount);
 
     const sW = availableW / contentW;
     const sH = availableH / contentH;
     
-    currentScale = Math.min(1, sW, sH) * 0.94; // Un peu plus petit pour la marge iPad
-
+    currentScale = Math.min(1, sW, sH);
     scaler.style.transform = `scale(${currentScale})`;
     resizeCanvas();
   }
@@ -253,9 +267,9 @@
     cache.setPointerCapture(e.pointerId);
     cache.onpointermove = (ev) => { 
       const rect = frame.getBoundingClientRect(); 
-      // Calcul du cache corrigé pour s'arrêter sur le bois
-      const xOffset = (rect.right - ev.clientX) / currentScale + 20;
-      cache.style.width = Math.max(0, Math.min(FRAME_W + 20, xOffset)) + "px"; 
+      // Calcul corrigé pour le bois (30px)
+      const xOffset = (rect.right - ev.clientX) / currentScale + 30;
+      cache.style.width = Math.max(0, Math.min(FRAME_W + 30, xOffset)) + "px"; 
     };
     cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
   }
