--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek - Version Tactile Optimisée</title>
+<title>Boulier Rekenrek - Version Finale Stable</title>
 <style>
   :root {
     --bg: #1a1a1a;
@@ -21,42 +21,37 @@
     overflow: hidden; touch-action: none;
   }
 
-  /* Barre d'outils */
   .toolbar {
     position: relative; width: 100%; min-height: 55px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
-    justify-content: center; gap: 15px; z-index: 1000; padding: 5px;
+    justify-content: center; gap: 20px; z-index: 1000; padding: 5px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.5);
   }
 
   .toolbar-group { display: flex; align-items: center; gap: 10px; }
 
-  /* Curseurs plus gros pour le doigt */
-  input[type=range] {
-    -webkit-appearance: none; width: 80px; background: transparent;
-  }
+  /* Gros curseur pour iPad */
+  input[type=range] { -webkit-appearance: none; width: 80px; background: transparent; }
   input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none; height: 24px; width: 24px; border-radius: 50%;
-    background: var(--accent); cursor: pointer; margin-top: -8px; border: 2px solid white;
+    -webkit-appearance: none; height: 26px; width: 26px; border-radius: 50%;
+    background: var(--accent); cursor: pointer; margin-top: -9px; border: 2px solid white;
   }
-  input[type=range]::-webkit-slider-runnable-track {
-    width: 100%; height: 8px; background: #444; border-radius: 4px;
-  }
+  input[type=range]::-webkit-slider-runnable-track { width: 100%; height: 8px; background: #444; border-radius: 4px; }
 
   .btn {
     border: none; background: #444; color: white; padding: 8px 12px;
-    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 12px;
+    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 13px;
   }
   .btn.active { background: var(--accent); outline: 1px solid white; }
 
   #main-container {
-    position: relative; width: 100%; height: calc(100vh - 65px);
+    position: relative; width: 100%; height: calc(100vh - 60px);
     display: flex; flex-direction: column; align-items: center;
     justify-content: flex-start; overflow: hidden;
   }
 
   #scaler {
-    margin-top: 5px;
+    margin-top: 60px; /* Plus d'espace en haut pour écrire sur PC */
     display: flex; flex-direction: column; align-items: center;
     transform-origin: top center;
     pointer-events: none;
@@ -64,7 +59,7 @@
 
   #total-display { 
     font-size: 42px; font-weight: bold; color: var(--accent); 
-    height: 50px; margin-bottom: 2px; text-shadow: 0 2px 4px black;
+    height: 50px; margin-bottom: 5px; text-shadow: 0 2px 4px black;
     display: flex; align-items: center;
   }
 
@@ -74,29 +69,19 @@
     pointer-events: auto; box-sizing: content-box;
   }
 
-  /* Hauteur de ligne adaptative via JS pour le paysage */
   .row { position: relative; height: 56px; width: 820px; pointer-events: auto; }
   .rod { position: absolute; width: 100%; height: 4px; background: var(--rod); top: 50%; transform: translateY(-50%); z-index: 1; }
 
-  /* CACHE : Positionné à l'extrémité du rail */
   #cache-curtain {
-    position: absolute; 
-    right: -30px; /* Garé sur toute la largeur du montant marron */
-    top: 0; bottom: 0; width: 0;
-    background: #000; z-index: 20; 
-    border-left: 4px solid #444; 
-    pointer-events: auto;
-    display: none; cursor: ew-resize;
+    position: absolute; right: -30px; top: 0; bottom: 0; width: 0;
+    background: #000; z-index: 20; border-left: 4px solid #444; 
+    pointer-events: auto; display: none; cursor: ew-resize;
   }
-  
   #cache-curtain::before { 
-    content: "↔"; position: absolute; 
-    left: -18px; 
-    top: 50%; 
+    content: "↔"; position: absolute; left: -18px; top: 50%; 
     background: #444; border-radius: 50%; width: 44px; height: 44px; 
     display: flex; align-items: center; justify-content: center; 
     font-weight: bold; font-size: 20px; color: white; transform: translateY(-50%);
-    box-shadow: -2px 0 5px rgba(0,0,0,0.5);
   }
 
   .bead {
@@ -109,7 +94,8 @@
   .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #bbb); }
   .bead.blue-mode.white { background: radial-gradient(circle at 30% 30%, var(--bead-blue), #0d47a1); }
 
-  #draw-layer { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 500; pointer-events: none; }
+  /* Canvas plein écran pour éviter les bugs d'offset */
+  #draw-layer { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 500; pointer-events: none; }
   #draw-layer.active { pointer-events: auto; cursor: crosshair; }
   
   .color-dot { width: 24px; height: 24px; border-radius: 50%; cursor: pointer; border: 2px solid #555; }
@@ -117,7 +103,8 @@
 
   @media (orientation: landscape) and (max-height: 450px) {
     #total-display { font-size: 28px; height: 35px; }
-    .toolbar { min-height: 40px; padding: 2px; }
+    #scaler { margin-top: 5px; } /* Marge réduite uniquement en paysage mobile */
+    .row { height: 45px; }
   }
 </style>
 </head>
@@ -148,7 +135,6 @@
 </div>
 
 <div id="main-container">
-  <canvas id="draw-layer"></canvas>
   <div id="scaler">
     <div id="total-display"></div>
     <div id="abacus-frame">
@@ -156,6 +142,7 @@
     </div>
   </div>
 </div>
+<canvas id="draw-layer"></canvas>
 
 <script>
   const frame = document.getElementById('abacus-frame');
@@ -195,17 +182,16 @@
   }
 
   function autoScale() {
-    const isLandscape = window.innerWidth > window.innerHeight && window.innerHeight < 500;
+    const availableW = window.innerWidth - 30;
+    const availableH = window.innerHeight - topBar.offsetHeight - 50;
     
-    // On réduit la hauteur des lignes en paysage pour gagner de la place
-    const rowH = isLandscape ? 42 : 56;
-    document.querySelectorAll('.row').forEach(r => r.style.height = rowH + "px");
-
-    const availableW = window.innerWidth - 20;
-    const availableH = window.innerHeight - topBar.offsetHeight - 40;
+    // Détection paysage mobile
+    const isLandMobile = window.innerWidth > window.innerHeight && window.innerHeight < 500;
+    const rowH = isLandMobile ? 45 : 56;
+    const topMargin = isLandMobile ? 35 : 110; // Espace display + marges
 
     const contentW = 880; 
-    const contentH = (isLandscape ? 35 : 50) + (rowH * rowsCount);
+    const contentH = topMargin + (rowH * rowsCount);
 
     const sW = availableW / contentW;
     const sH = availableH / contentH;
@@ -244,7 +230,8 @@
   window.addEventListener('pointerup', () => {
     if (!activeDrag) return;
     const { rowIdx, beadIdx, rowEl } = activeDrag;
-    const currentPos = parseFloat(rowEl.querySelectorAll('.bead')[beadIdx].style.left);
+    const beads = rowEl.querySelectorAll('.bead');
+    const currentPos = parseFloat(beads[beadIdx].style.left);
     if (beadIdx >= states[rowIdx]) { if (currentPos < (FRAME_W/2) + (beadIdx*5)) states[rowIdx] = beadIdx + 1; }
     else { if (currentPos > (FRAME_W/2) - ((10-beadIdx)*5)) states[rowIdx] = beadIdx; }
     activeDrag = null; updateBeads(true);
@@ -261,32 +248,30 @@
   }
 
   function toggleCache() { isCache = !isCache; cache.style.display = isCache ? 'block' : 'none'; document.getElementById('btn-cache').classList.toggle('active', isCache); }
-  
-  function startCacheDrag(e) { 
-    e.preventDefault(); 
-    cache.setPointerCapture(e.pointerId);
-    cache.onpointermove = (ev) => { 
-      const rect = frame.getBoundingClientRect(); 
-      // Calcul corrigé pour le bois (30px)
-      const xOffset = (rect.right - ev.clientX) / currentScale + 30;
-      cache.style.width = Math.max(0, Math.min(FRAME_W + 30, xOffset)) + "px"; 
-    };
+  function startCacheDrag(e) { e.preventDefault(); cache.setPointerCapture(e.pointerId);
+    cache.onpointermove = (ev) => { const rect = frame.getBoundingClientRect(); cache.style.width = Math.max(0, Math.min(FRAME_W + 30, (rect.right - ev.clientX)/currentScale + 30)) + "px"; };
     cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
   }
 
-  function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; ctx.lineCap = 'round'; }
+  // --- MOTEUR DE DESSIN ULTRA-STABLE ---
+  function resizeCanvas() { 
+    canvas.width = window.innerWidth; 
+    canvas.height = window.innerHeight; 
+    ctx.lineCap = 'round'; 
+  }
+
   let drawing = false, activeDrag = null;
   canvas.onpointerdown = (e) => { 
     if (!isPen) return;
     drawing = true; 
-    const rect = canvas.getBoundingClientRect();
-    ctx.beginPath(); ctx.strokeStyle = penCol; ctx.moveTo(e.clientX - rect.left, e.clientY - rect.top); 
+    ctx.beginPath(); 
+    ctx.strokeStyle = penCol; 
+    ctx.lineWidth = window.innerWidth < 800 ? 2.5 : 4;
+    ctx.moveTo(e.clientX, e.clientY); // Coordonnées absolues
   };
   canvas.onpointermove = (e) => { 
     if (isPen && drawing) { 
-      const rect = canvas.getBoundingClientRect();
-      ctx.lineTo(e.clientX - rect.left, e.clientY - rect.top); 
-      ctx.lineWidth = window.innerWidth < 800 ? 2.5 : 4;
+      ctx.lineTo(e.clientX, e.clientY); 
       ctx.stroke(); 
     } 
   };
