--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek - Version Finale Stable</title>
+<title>Boulier Rekenrek - Version Finale iPhone Fix</title>
 <style>
   :root {
     --bg: #1a1a1a;
@@ -21,17 +21,21 @@
     overflow: hidden; touch-action: none;
   }
 
+  /* Toolbar avec protection pour l'encoche iPhone */
   .toolbar {
     position: relative; width: 100%; min-height: 55px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
-    justify-content: center; gap: 20px; z-index: 1000; padding: 5px;
+    justify-content: center; gap: 20px; z-index: 1000; 
+    padding: 5px 20px;
+    padding-left: max(20px, env(safe-area-inset-left));
+    padding-right: max(20px, env(safe-area-inset-right));
     box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+    box-sizing: border-box;
   }
 
   .toolbar-group { display: flex; align-items: center; gap: 10px; }
 
-  /* Gros curseur pour iPad */
-  input[type=range] { -webkit-appearance: none; width: 80px; background: transparent; }
+  input[type=range] { -webkit-appearance: none; width: 85px; background: transparent; margin-left: 10px; }
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none; height: 26px; width: 26px; border-radius: 50%;
     background: var(--accent); cursor: pointer; margin-top: -9px; border: 2px solid white;
@@ -51,7 +55,7 @@
   }
 
   #scaler {
-    margin-top: 60px; /* Plus d'espace en haut pour écrire sur PC */
+    margin-top: 60px;
     display: flex; flex-direction: column; align-items: center;
     transform-origin: top center;
     pointer-events: none;
@@ -94,7 +98,6 @@
   .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #bbb); }
   .bead.blue-mode.white { background: radial-gradient(circle at 30% 30%, var(--bead-blue), #0d47a1); }
 
-  /* Canvas plein écran pour éviter les bugs d'offset */
   #draw-layer { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 500; pointer-events: none; }
   #draw-layer.active { pointer-events: auto; cursor: crosshair; }
   
@@ -103,7 +106,7 @@
 
   @media (orientation: landscape) and (max-height: 450px) {
     #total-display { font-size: 28px; height: 35px; }
-    #scaler { margin-top: 5px; } /* Marge réduite uniquement en paysage mobile */
+    #scaler { margin-top: 5px; } 
     .row { height: 45px; }
   }
 </style>
@@ -184,19 +187,14 @@
   function autoScale() {
     const availableW = window.innerWidth - 30;
     const availableH = window.innerHeight - topBar.offsetHeight - 50;
-    
-    // Détection paysage mobile
     const isLandMobile = window.innerWidth > window.innerHeight && window.innerHeight < 500;
     const rowH = isLandMobile ? 45 : 56;
-    const topMargin = isLandMobile ? 35 : 110; // Espace display + marges
+    const topMargin = isLandMobile ? 35 : 110; 
 
     const contentW = 880; 
     const contentH = topMargin + (rowH * rowsCount);
 
-    const sW = availableW / contentW;
-    const sH = availableH / contentH;
-    
-    currentScale = Math.min(1, sW, sH);
+    currentScale = Math.min(1, availableW / contentW, availableH / contentH);
     scaler.style.transform = `scale(${currentScale})`;
     resizeCanvas();
   }
@@ -222,16 +220,14 @@
 
   function moveVisual(b, idx, dx, fromRight) {
     let base = fromRight ? (FRAME_W - (10 - idx) * (BEAD_W + GAP)) : (idx * (BEAD_W + GAP));
-    let pos = base + dx;
     b.style.transition = 'none';
-    b.style.left = Math.max(idx * (BEAD_W + GAP), Math.min(FRAME_W - (10 - idx) * (BEAD_W + GAP), pos)) + "px";
+    b.style.left = Math.max(idx * (BEAD_W + GAP), Math.min(FRAME_W - (10 - idx) * (BEAD_W + GAP), base + dx)) + "px";
   }
 
   window.addEventListener('pointerup', () => {
     if (!activeDrag) return;
     const { rowIdx, beadIdx, rowEl } = activeDrag;
-    const beads = rowEl.querySelectorAll('.bead');
-    const currentPos = parseFloat(beads[beadIdx].style.left);
+    const currentPos = parseFloat(rowEl.querySelectorAll('.bead')[beadIdx].style.left);
     if (beadIdx >= states[rowIdx]) { if (currentPos < (FRAME_W/2) + (beadIdx*5)) states[rowIdx] = beadIdx + 1; }
     else { if (currentPos > (FRAME_W/2) - ((10-beadIdx)*5)) states[rowIdx] = beadIdx; }
     activeDrag = null; updateBeads(true);
@@ -253,7 +249,7 @@
     cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
   }
 
-  // --- MOTEUR DE DESSIN ULTRA-STABLE ---
+  // --- DESSIN MOBILE STABLE ---
   function resizeCanvas() { 
     canvas.width = window.innerWidth; 
     canvas.height = window.innerHeight; 
@@ -267,7 +263,8 @@
     ctx.beginPath(); 
     ctx.strokeStyle = penCol; 
     ctx.lineWidth = window.innerWidth < 800 ? 2.5 : 4;
-    ctx.moveTo(e.clientX, e.clientY); // Coordonnées absolues
+    // On utilise clientX/Y qui sont les plus fiables sur iOS
+    ctx.moveTo(e.clientX, e.clientY); 
   };
   canvas.onpointermove = (e) => { 
     if (isPen && drawing) { 
@@ -286,7 +283,15 @@
   function toggleColorMode() { isBlue = !isBlue; document.getElementById('btn-color').textContent = isBlue ? "⚪ Blanc" : "🔵 Bleu"; document.querySelectorAll('.bead.white').forEach(b => b.classList.toggle('blue-mode', isBlue)); }
 
   document.getElementById('row-range').oninput = (e) => { rowsCount = parseInt(e.target.value); document.getElementById('row-val').innerText = rowsCount; init(); };
-  window.addEventListener('resize', autoScale);
+  
+  // Correction spécifique : On force un délai pour laisser le temps au navigateur de finir sa rotation
+  window.addEventListener('resize', () => {
+    setTimeout(autoScale, 100);
+  });
+  window.addEventListener('orientationchange', () => {
+    setTimeout(autoScale, 200);
+  });
+  
   init();
 </script>
 </body>
