--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,16 +3,11 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek - Version Finale iPhone Fix</title>
+<title>Boulier Rekenrek - Correction Ultime</title>
 <style>
   :root {
-    --bg: #1a1a1a;
-    --wood: #b08d57;
-    --rod: #888;
-    --ui: #2a2a2a;
-    --accent: #0f6cf9;
-    --bead-white: #ffffff;
-    --bead-blue: #2196f3;
+    --bg: #1a1a1a; --wood: #b08d57; --rod: #888; --ui: #2a2a2a;
+    --accent: #0f6cf9; --bead-white: #ffffff; --bead-blue: #2196f3;
   }
 
   body, html { 
@@ -21,30 +16,26 @@
     overflow: hidden; touch-action: none;
   }
 
-  /* Toolbar avec protection pour l'encoche iPhone */
   .toolbar {
     position: relative; width: 100%; min-height: 55px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
-    justify-content: center; gap: 20px; z-index: 1000; 
-    padding: 5px 20px;
-    padding-left: max(20px, env(safe-area-inset-left));
-    padding-right: max(20px, env(safe-area-inset-right));
-    box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-    box-sizing: border-box;
+    justify-content: center; gap: 15px; z-index: 1000; padding: 5px 20px;
+    box-sizing: border-box; box-shadow: 0 4px 10px rgba(0,0,0,0.5);
   }
 
-  .toolbar-group { display: flex; align-items: center; gap: 10px; }
+  .toolbar-group { display: flex; align-items: center; gap: 8px; }
 
-  input[type=range] { -webkit-appearance: none; width: 85px; background: transparent; margin-left: 10px; }
+  /* Curseur amélioré pour le tactile */
+  input[type=range] { -webkit-appearance: none; width: 90px; background: transparent; cursor: pointer; }
   input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none; height: 26px; width: 26px; border-radius: 50%;
-    background: var(--accent); cursor: pointer; margin-top: -9px; border: 2px solid white;
+    -webkit-appearance: none; height: 28px; width: 28px; border-radius: 50%;
+    background: var(--accent); margin-top: -10px; border: 2px solid white;
   }
   input[type=range]::-webkit-slider-runnable-track { width: 100%; height: 8px; background: #444; border-radius: 4px; }
 
   .btn {
-    border: none; background: #444; color: white; padding: 8px 12px;
-    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 13px;
+    border: none; background: #444; color: white; padding: 7px 12px;
+    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 12px;
   }
   .btn.active { background: var(--accent); outline: 1px solid white; }
 
@@ -55,10 +46,8 @@
   }
 
   #scaler {
-    margin-top: 60px;
-    display: flex; flex-direction: column; align-items: center;
-    transform-origin: top center;
-    pointer-events: none;
+    margin-top: 60px; display: flex; flex-direction: column; align-items: center;
+    transform-origin: top center; pointer-events: none;
   }
 
   #total-display { 
@@ -98,14 +87,16 @@
   .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #bbb); }
   .bead.blue-mode.white { background: radial-gradient(circle at 30% 30%, var(--bead-blue), #0d47a1); }
 
-  #draw-layer { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 500; pointer-events: none; }
+  #draw-layer { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 500; pointer-events: none; }
   #draw-layer.active { pointer-events: auto; cursor: crosshair; }
   
   .color-dot { width: 24px; height: 24px; border-radius: 50%; cursor: pointer; border: 2px solid #555; }
   .color-dot.active { border-color: white; transform: scale(1.1); }
 
-  @media (orientation: landscape) and (max-height: 450px) {
-    #total-display { font-size: 28px; height: 35px; }
+  /* CORRECTION PAYSAGE IPHONE */
+  @media (orientation: landscape) {
+    .toolbar { padding-left: 60px; gap: 10px; } /* On dégage l'encoche */
+    #total-display { font-size: 28px; height: 32px; }
     #scaler { margin-top: 5px; } 
     .row { height: 45px; }
   }
@@ -138,6 +129,7 @@
 </div>
 
 <div id="main-container">
+  <canvas id="draw-layer"></canvas>
   <div id="scaler">
     <div id="total-display"></div>
     <div id="abacus-frame">
@@ -145,7 +137,6 @@
     </div>
   </div>
 </div>
-<canvas id="draw-layer"></canvas>
 
 <script>
   const frame = document.getElementById('abacus-frame');
@@ -187,14 +178,9 @@
   function autoScale() {
     const availableW = window.innerWidth - 30;
     const availableH = window.innerHeight - topBar.offsetHeight - 50;
-    const isLandMobile = window.innerWidth > window.innerHeight && window.innerHeight < 500;
-    const rowH = isLandMobile ? 45 : 56;
-    const topMargin = isLandMobile ? 35 : 110; 
-
-    const contentW = 880; 
-    const contentH = topMargin + (rowH * rowsCount);
-
-    currentScale = Math.min(1, availableW / contentW, availableH / contentH);
+    const isLand = window.innerWidth > window.innerHeight && window.innerHeight < 500;
+    const contentH = (isLand ? 32 : 110) + ((isLand ? 45 : 56) * rowsCount);
+    currentScale = Math.min(1, availableW / 880, availableH / contentH);
     scaler.style.transform = `scale(${currentScale})`;
     resizeCanvas();
   }
@@ -249,26 +235,22 @@
     cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
   }
 
-  // --- DESSIN MOBILE STABLE ---
-  function resizeCanvas() { 
-    canvas.width = window.innerWidth; 
-    canvas.height = window.innerHeight; 
-    ctx.lineCap = 'round'; 
-  }
-
+  // --- DESSIN ULTRA-STABLE (FIX PAYSAGE) ---
+  function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; ctx.lineCap = 'round'; }
+  
   let drawing = false, activeDrag = null;
   canvas.onpointerdown = (e) => { 
     if (!isPen) return;
     drawing = true; 
-    ctx.beginPath(); 
-    ctx.strokeStyle = penCol; 
-    ctx.lineWidth = window.innerWidth < 800 ? 2.5 : 4;
-    // On utilise clientX/Y qui sont les plus fiables sur iOS
-    ctx.moveTo(e.clientX, e.clientY); 
+    const r = canvas.getBoundingClientRect();
+    ctx.beginPath(); ctx.strokeStyle = penCol; 
+    ctx.lineWidth = window.innerWidth < 800 ? 1.8 : 4; // Plus fin en paysage mobile
+    ctx.moveTo(e.clientX - r.left, e.clientY - r.top); 
   };
   canvas.onpointermove = (e) => { 
     if (isPen && drawing) { 
-      ctx.lineTo(e.clientX, e.clientY); 
+      const r = canvas.getBoundingClientRect();
+      ctx.lineTo(e.clientX - r.left, e.clientY - r.top); 
       ctx.stroke(); 
     } 
   };
@@ -283,15 +265,7 @@
   function toggleColorMode() { isBlue = !isBlue; document.getElementById('btn-color').textContent = isBlue ? "⚪ Blanc" : "🔵 Bleu"; document.querySelectorAll('.bead.white').forEach(b => b.classList.toggle('blue-mode', isBlue)); }
 
   document.getElementById('row-range').oninput = (e) => { rowsCount = parseInt(e.target.value); document.getElementById('row-val').innerText = rowsCount; init(); };
-  
-  // Correction spécifique : On force un délai pour laisser le temps au navigateur de finir sa rotation
-  window.addEventListener('resize', () => {
-    setTimeout(autoScale, 100);
-  });
-  window.addEventListener('orientationchange', () => {
-    setTimeout(autoScale, 200);
-  });
-  
+  window.addEventListener('resize', () => { resizeCanvas(); autoScale(); });
   init();
 </script>
 </body>
