--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek - Version Pro Universelle</title>
+<title>Boulier Rekenrek - Version Grand Espace</title>
 <style>
   :root {
     --bg: #1a1a1a; --wood: #b08d57; --rod: #888; --ui: #2a2a2a;
@@ -16,7 +16,6 @@
     overflow: hidden; touch-action: none;
   }
 
-  /* Toolbar : Protection Encoche iPhone & Centrage PC */
   .toolbar {
     position: relative; width: 100%; min-height: 55px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
@@ -26,11 +25,10 @@
 
   .toolbar-group { display: flex; align-items: center; gap: 10px; }
 
-  /* Sélecteur tactile large */
   input[type=range] { -webkit-appearance: none; width: 90px; background: transparent; }
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none; height: 26px; width: 26px; border-radius: 50%;
-    background: var(--accent); margin-top: -9px; border: 2px solid white;
+    background: var(--accent); cursor: pointer; margin-top: -9px; border: 2px solid white;
   }
   input[type=range]::-webkit-slider-runnable-track { width: 100%; height: 8px; background: #444; border-radius: 4px; }
 
@@ -46,9 +44,9 @@
     justify-content: flex-start; overflow: hidden;
   }
 
-  /* Gestion de l'espace au-dessus du boulier */
+  /* ESPACE DE TRAVAIL ÉLARGI SUR PC */
   #scaler {
-    margin-top: 90px; /* Grand espace pour écrire sur ordinateur */
+    margin-top: 180px; /* Espace généreux pour écrire */
     display: flex; flex-direction: column; align-items: center;
     transform-origin: top center; pointer-events: none;
   }
@@ -68,7 +66,6 @@
   .row { position: relative; height: 56px; width: 820px; pointer-events: auto; }
   .rod { position: absolute; width: 100%; height: 4px; background: var(--rod); top: 50%; transform: translateY(-50%); z-index: 1; }
 
-  /* Cache calé à l'extrémité du bois */
   #cache-curtain {
     position: absolute; right: -30px; top: 0; bottom: 0; width: 0;
     background: #000; z-index: 20; border-left: 4px solid #444; 
@@ -87,21 +84,21 @@
     cursor: grab; touch-action: none;
     box-shadow: inset -3px -3px 6px rgba(0,0,0,0.4), 2px 2px 5px rgba(0,0,0,0.5);
   }
+  /* Couleurs avec inversion 5/5 */
   .bead.red { background: radial-gradient(circle at 30% 30%, #ff5f5f, #a00); }
   .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #bbb); }
   .bead.blue-mode.white { background: radial-gradient(circle at 30% 30%, var(--bead-blue), #0d47a1); }
 
-  /* Stylo Fixe : Supprime tout décalage */
   #draw-layer { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 500; pointer-events: none; }
   #draw-layer.active { pointer-events: auto; cursor: crosshair; }
   
   .color-dot { width: 24px; height: 24px; border-radius: 50%; cursor: pointer; border: 2px solid #555; }
   .color-dot.active { border-color: white; transform: scale(1.1); }
 
-  /* --- RÉGLAGES SPÉCIFIQUES TÉLÉPHONE PAYSAGE --- */
+  /* --- ADAPTATION SMARTPHONE PAYSAGE (Remontée maximale) --- */
   @media (orientation: landscape) and (max-height: 500px) {
     .toolbar { padding-left: 80px; gap: 10px; min-height: 45px; }
-    #scaler { margin-top: 5px; } /* On réduit l'espace pour sauver la 10ème ligne */
+    #scaler { margin-top: 5px; } 
     #total-display { font-size: 28px; height: 32px; }
     .row { height: 45px; }
   }
@@ -183,7 +180,9 @@
   function autoScale() {
     const availableW = window.innerWidth - 30;
     const isLandPhone = window.innerWidth > window.innerHeight && window.innerHeight < 500;
-    const margin = isLandPhone ? 40 : 150; // Marge de sécurité
+    
+    // Marge de sécurité beaucoup plus grande sur PC (240px) vs Mobile (40px)
+    const margin = isLandPhone ? 40 : 240; 
     const availableH = window.innerHeight - topBar.offsetHeight - margin;
 
     const rowH = isLandPhone ? 45 : 56;
@@ -222,7 +221,8 @@
   window.addEventListener('pointerup', () => {
     if (!activeDrag) return;
     const { rowIdx, beadIdx, rowEl } = activeDrag;
-    const currentPos = parseFloat(rowEl.querySelectorAll('.bead')[beadIdx].style.left);
+    const beads = rowEl.querySelectorAll('.bead');
+    const currentPos = parseFloat(beads[beadIdx].style.left);
     if (beadIdx >= states[rowIdx]) { if (currentPos < (FRAME_W/2) + (beadIdx*5)) states[rowIdx] = beadIdx + 1; }
     else { if (currentPos > (FRAME_W/2) - ((10-beadIdx)*5)) states[rowIdx] = beadIdx; }
     activeDrag = null; updateBeads(true);
@@ -244,7 +244,6 @@
     cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
   }
 
-  // --- DESSIN : FIX ABSOLU ---
   function resizeCanvas() { 
     canvas.width = window.innerWidth; 
     canvas.height = window.innerHeight; 
